# desafio-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  api.py  docker-compose.yml  pyproject.toml  run.py  tests.py
app/: __init__.py
app/database/: database.py
app/models/: __init__.py  analysis.py  author.py  repository.py
app/repositories/: author_repository.py  repository_repository.py
app/routes/: git_analysis.py
app/services/: git_analyzer.py
migrations/: env.py
migrations/versions/: 5dee79da5cde_.py  f790ef8f4ade_tabelas_normalizadas_author_repository_.py
tests/integration/: test_api_routes.py
tests/unit/: test_git_analyzer_service.py
